feature: attach the source module when logging a message.